feat: had a quick look at the data, merged data.
Former-commit-id: aba7abe6f6939e9511f46e2dc6417f697a573a54

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/kevinmaikjablonka/opt/miniconda3/envs/dispersant_basf/bin/python"
+    "python.pythonPath": "/Users/kevinmaikjablonka/opt/miniconda3/envs/dispersant_basf/bin/python",
+    "python.formatting.provider": "yapf"
 }
