--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - ampl-mp=3.1.0=hfcebdee_1003
   - appnope=0.1.0=py37hc8dfbb8_1001
   - asn1crypto=1.3.0=py37hc8dfbb8_1
   - astropy=4.0.1.post1=py37h9bfed18_0
@@ -10,12 +11,14 @@ dependencies:
   - backcall=0.1.0=py_0
   - bleach=3.1.5=pyh9f0ad1d_0
   - bokeh=2.0.1=py37hc8dfbb8_0
+  - boost-cpp=1.72.0=hdf9ef73_0
   - brotlipy=0.7.0=py37h9bfed18_1000
   - bzip2=1.0.8=h0b31af3_2
   - ca-certificates=2020.4.5.1=hecc5488_0
   - certifi=2020.4.5.1=py37hc8dfbb8_0
   - cffi=1.14.0=py37h356ff06_0
   - chardet=3.0.4=py37hc8dfbb8_1006
+  - cloudpickle=1.4.1=py_0
   - confuse=1.1.0=pyh9f0ad1d_0
   - cryptography=2.5=py37hdbc3d79_1
   - cycler=0.10.0=py_2
@@ -25,10 +28,13 @@ dependencies:
   - freetype=2.10.1=h8da9a1a_0
   - holoviews=1.13.2=pyh9f0ad1d_0
   - htmlmin=0.1.12=py_1
+  - icu=64.2=h6de7cb9_1
   - idna=2.9=py_1
   - importlib-metadata=1.6.0=py37hc8dfbb8_0
   - importlib_metadata=1.6.0=0
+  - ipopt=3.12.13=hfed70e2_1
   - ipykernel=5.2.1=py37h43977f1_0
+  - ipyparallel=6.3.0=py37hc8dfbb8_0
   - ipython=7.14.0=py37hc8dfbb8_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
@@ -62,19 +68,24 @@ dependencies:
   - markupsafe=1.1.1=py37h9bfed18_1
   - matplotlib=3.2.1=0
   - matplotlib-base=3.2.1=py37hddda452_0
+  - metis=5.1.0=h4a8c4bd_1005
   - missingno=0.4.2=py_1
   - mistune=0.8.4=py37h9bfed18_1001
+  - mumps-include=5.2.1=8
+  - mumps-seq=5.2.1=h628e9fb_6
   - nb_conda_kernels=2.2.3=py37_0
   - nbconvert=5.6.1=py37hc8dfbb8_1
   - nbformat=5.0.6=py_0
   - ncurses=6.1=h0a44026_1002
   - networkx=2.4=py_1
+  - nlopt=2.6.1=py37hb69b2a7_2
   - notebook=6.0.3=py37_0
   - numba=0.48.0=py37h4f17bb1_0
   - numpy=1.18.4=py37h7687784_0
   - olefile=0.46=py_0
   - openssl=1.0.2u=h0b31af3_0
   - packaging=20.1=py_0
+  - pagmo=2.15.0=h7fa3c16_1
   - pandas=1.0.3=py37h94625e5_1
   - pandas-profiling=2.6.0=py_0
   - pandoc=2.9.2.1=0
@@ -95,6 +106,7 @@ dependencies:
   - pyct=0.4.6=py_0
   - pyct-core=0.4.6=py_0
   - pygments=2.6.1=py_0
+  - pygmo=2.15.0=py37h11c9a5d_0
   - pyopenssl=19.0.0=py37_0
   - pyparsing=2.4.7=pyh9f0ad1d_0
   - pyrsistent=0.16.0=py37h9bfed18_0
@@ -110,6 +122,7 @@ dependencies:
   - requests=2.23.0=pyh8c360ce_2
   - scikit-learn=0.22.2.post1=py37h3dc85bc_0
   - scipy=1.4.1=py37hce1b9e5_3
+  - scotch=6.0.8=h703c93e_1
   - seaborn=0.10.1=py_0
   - send2trash=1.5.0=py_0
   - setuptools=46.1.3=py37hc8dfbb8_0
@@ -117,6 +130,7 @@ dependencies:
   - sqlite=3.28.0=h9721f7c_0
   - statsmodels=0.11.1=py37h9bfed18_1
   - tangled-up-in-unicode=0.0.4=py_0
+  - tbb=2019.9=ha1b3eb9_1
   - terminado=0.8.3=py37hc8dfbb8_1
   - testpath=0.4.4=py_0
   - tk=8.6.10=hbbe82c9_0
