--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,12 +53,12 @@ repos:
 
   - repo: local
     hooks:
-      - id: prospector
+      - id: isort
+        name: isort
         language: system
-        types: [file, python]
-        exclude: versioneer.py|dispersant_screener/_version.py
-        name: prospector
-        entry: prospector
+        types: [python]
+        entry: isort
+
       - id: yapf
         name: yapf
         exclude: versioneer.py|dispersant_screener/_version.py
@@ -66,3 +66,10 @@ repos:
         language: system
         types: [python]
         args: ["-i"]
+
+      - id: prospector
+        language: system
+        types: [file, python]
+        exclude: versioneer.py|dispersant_screener/_version.py
+        name: prospector
+        entry: prospector
