chore: adding docs
Former-commit-id: 7abea7a8c07b518fb897fa0c7c1f1dac0deedffa [formerly 4e3fe5f9e53e3d74d2bb2c8e0a57e4b1745a61e5]
Former-commit-id: 719908bf263abfe1e80f3f627ce5e5d5a965b9b6

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,12 +56,13 @@ repos:
       - id: isort
         name: isort
         language: system
+        exclude: versioneer.py|dispersant_screener/_version.py|^docs/
         types: [python]
         entry: isort
 
       - id: yapf
         name: yapf
-        exclude: versioneer.py|dispersant_screener/_version.py
+        exclude: versioneer.py|dispersant_screener/_version.py|^docs/
         entry: yapf
         language: system
         types: [python]
@@ -70,6 +71,6 @@ repos:
       - id: prospector
         language: system
         types: [file, python]
-        exclude: versioneer.py|dispersant_screener/_version.py
+        exclude: versioneer.py|dispersant_screener/_version.py|^docs/
         name: prospector
         entry: prospector
