feat: implemented experimental batching and progress bar, also added mypy check
Former-commit-id: e1d9c7bd4ebe96328aeb093b6731626f63cb99bb [formerly cf6440de23480740acfe76fae564b50c0bcf55eb]
Former-commit-id: ac489fcfd73370a691c34eaa3975f38356a4dc20

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -51,6 +51,12 @@ repos:
           - --nobackups
           - --nofix=dict_six
 
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "" # Use the sha / tag you want to point at
+    hooks:
+      - id: mypy
+        exclude: versioneer.py|dispersant_screener/_version.py|^docs/
+
   - repo: local
     hooks:
       - id: isort
