--- a/environment.yml
+++ b/environment.yml
@@ -14,14 +14,16 @@ dependencies:
   - boost-cpp=1.72.0=hdf9ef73_0
   - brotlipy=0.7.0=py37h9bfed18_1000
   - bzip2=1.0.8=h0b31af3_2
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py37hc8dfbb8_0
+  - ca-certificates=2020.6.20=hecda079_0
+  - certifi=2020.6.20=py37hc8dfbb8_0
   - cffi=1.14.0=py37h356ff06_0
   - chardet=3.0.4=py37hc8dfbb8_1006
   - cloudpickle=1.4.1=py_0
   - confuse=1.1.0=pyh9f0ad1d_0
   - cryptography=2.5=py37hdbc3d79_1
   - cycler=0.10.0=py_2
+  - cytoolz=0.10.1=py37h0b31af3_0
+  - dask-core=2.19.0=py_0
   - decorator=4.4.2=py_0
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py37hc8dfbb8_1001
@@ -30,6 +32,8 @@ dependencies:
   - htmlmin=0.1.12=py_1
   - icu=64.2=h6de7cb9_1
   - idna=2.9=py_1
+  - imagecodecs-lite=2019.12.3=py37h10e2902_1
+  - imageio=2.8.0=py_0
   - importlib-metadata=1.6.0=py37hc8dfbb8_0
   - importlib_metadata=1.6.0=0
   - ipopt=3.12.13=hfed70e2_1
@@ -116,16 +120,19 @@ dependencies:
   - python_abi=3.7=1_cp37m
   - pytz=2020.1=pyh9f0ad1d_0
   - pyviz_comms=0.7.4=pyh8c360ce_0
+  - pywavelets=1.1.1=py37h10e2902_1
   - pyyaml=5.3.1=py37h9bfed18_0
   - pyzmq=19.0.1=py37haec44b1_0
   - readline=7.0=hcfe32e1_1001
   - requests=2.23.0=pyh8c360ce_2
+  - scikit-image=0.17.2=py37h94625e5_1
   - scikit-learn=0.22.2.post1=py37h3dc85bc_0
   - scipy=1.4.1=py37hce1b9e5_3
   - scotch=6.0.8=h703c93e_1
   - seaborn=0.10.1=py_0
   - send2trash=1.5.0=py_0
   - setuptools=46.1.3=py37hc8dfbb8_0
+  - shap=0.35.0=py37h94625e5_0
   - six=1.14.0=py_1
   - sqlite=3.28.0=h9721f7c_0
   - statsmodels=0.11.1=py37h9bfed18_1
@@ -133,7 +140,9 @@ dependencies:
   - tbb=2019.9=ha1b3eb9_1
   - terminado=0.8.3=py37hc8dfbb8_1
   - testpath=0.4.4=py_0
+  - tifffile=2020.6.3=py_0
   - tk=8.6.10=hbbe82c9_0
+  - toolz=0.10.0=py_0
   - tornado=6.0.4=py37h9bfed18_1
   - tqdm=4.46.0=pyh9f0ad1d_0
   - traitlets=4.3.3=py37hc8dfbb8_1
@@ -151,7 +160,54 @@ dependencies:
   - zlib=1.2.11=h0b31af3_1006
   - zstd=1.4.4=h4b3e974_3
   - pip:
+    - alabaster==0.7.12
+    - appdirs==1.4.4
+    - apricot-select==0.5.0
+    - astroid==2.3.3
+    - babel==2.8.0
+    - cfgv==3.1.0
+    - distlib==0.3.0
+    - docutils==0.16
+    - dodgy==0.2.1
+    - filelock==3.0.12
     - gpy==1.9.9
+    - guzzle-sphinx-theme==0.7.11
+    - identify==1.4.19
     - imagehash==4.1.0
+    - imagesize==1.2.0
+    - isort==4.3.21
+    - lazy-object-proxy==1.4.3
+    - mccabe==0.6.1
+    - more-itertools==8.4.0
+    - nodeenv==1.4.0
     - paramz==0.9.5
-    - pywavelets==1.1.1
+    - pep8-naming==0.4.1
+    - pluggy==0.13.1
+    - pre-commit==2.5.1
+    - prospector==1.2.0
+    - py==1.8.2
+    - pycodestyle==2.4.0
+    - pydocstyle==5.0.2
+    - pyflakes==2.1.1
+    - pylint==2.4.4
+    - pylint-celery==0.3
+    - pylint-django==2.0.12
+    - pylint-flask==0.6
+    - pylint-plugin-utils==0.6
+    - pytest==5.4.3
+    - requirements-detector==0.7
+    - setoptconf==0.2.0
+    - snowballstemmer==2.0.0
+    - sphinx==3.1.1
+    - sphinxcontrib-applehelp==1.0.2
+    - sphinxcontrib-devhelp==1.0.2
+    - sphinxcontrib-htmlhelp==1.0.3
+    - sphinxcontrib-jsmath==1.0.1
+    - sphinxcontrib-qthelp==1.0.3
+    - sphinxcontrib-serializinghtml==1.1.4
+    - toml==0.10.1
+    - typed-ast==1.4.1
+    - versioneer==0.18
+    - virtualenv==20.0.23
+    - wrapt==1.11.2
+    - yapf==0.30.0
