--- a/environment.yml
+++ b/environment.yml
@@ -85,6 +85,7 @@ dependencies:
   - nlopt=2.6.1=py37hb69b2a7_2
   - notebook=6.0.3=py37_0
   - numba=0.48.0=py37h4f17bb1_0
+  - numpy=1.19.1=py37h7e69742_0
   - olefile=0.46=py_0
   - openssl=1.0.2u=h0b31af3_0
   - packaging=20.1=py_0
@@ -142,6 +143,7 @@ dependencies:
   - tk=8.6.10=hbbe82c9_0
   - toolz=0.10.0=py_0
   - tornado=6.0.4=py37h9bfed18_1
+  - tqdm=4.48.2=pyh9f0ad1d_0
   - traitlets=4.3.3=py37hc8dfbb8_1
   - typing_extensions=3.7.4.2=py_0
   - urllib3=1.25.9=py_0
@@ -185,11 +187,11 @@ dependencies:
     - mccabe==0.6.1
     - more-itertools==8.4.0
     - nodeenv==1.4.0
-    - numpy==1.19.1
     - nvidia-ml-py3==7.352.0
     - paramz==0.9.5
     - pathtools==0.1.2
     - pep8-naming==0.4.1
+    - plotly==4.9.0
     - pluggy==0.13.1
     - pre-commit==2.5.1
     - promise==2.3
@@ -206,6 +208,7 @@ dependencies:
     - pylint-plugin-utils==0.6
     - pytest==5.4.3
     - requirements-detector==0.7
+    - retrying==1.3.3
     - scikit-learn==0.23.2
     - sentry-sdk==0.16.3
     - setoptconf==0.2.0
@@ -222,7 +225,6 @@ dependencies:
     - subprocess32==3.5.4
     - threadpoolctl==2.1.0
     - toml==0.10.1
-    - tqdm==4.48.2
     - typed-ast==1.4.1
     - versioneer==0.18
     - virtualenv==20.0.23
